test/pass/variance/function_contravariance.lily
class One {}
class Two < One {}

define f(a: One) {}
define g(a: Two) {}

var v = g
v = f
